Bug 487844 - Window snaps to wrong monitor
Summary: Window snaps to wrong monitor
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: multi-screen (other bugs)
Version First Reported In: git-stable-Plasma/6.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-31 16:55 UTC by kostadinshishmanov
Modified: 2024-06-06 17:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kostadinshishmanov 2024-05-31 16:55:52 UTC
SUMMARY

When I try to put a window on the left part of my second monitor (the right one), the window that I tried to snap instead goes to the left part of my main monitor (the left one). It happens 9/10 times

Video showing the issue: https://www.youtube.com/watch?v=mLvIa2MW18g

STEPS TO REPRODUCE
1. Have two monitors and open a program
2. Try to snap it to the left of the right monitor

OBSERVED RESULT

Window goes to the wrong monitor

EXPECTED RESULT

The window stays on the monitor it should have been put on.

SOFTWARE/OS VERSIONS
Gentoo Linux
KDE Plasma Version: 6.0.90
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.1
Kernel: 6.9.3
Graphics Platform: Wayland
GPU: AMD Radeon RX 6800
Comment 1 kostadinshishmanov 2024-06-02 20:17:11 UTC
Can't reproduce on X11, so it's something related to wayland.
Comment 2 Bug Janitor Service 2024-06-06 14:54:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5846
Comment 3 Zamundaaa 2024-06-06 16:53:45 UTC
Git commit 0cd6f5cd06c00b9a4dff25af2d54b5aa3b98a4db by Xaver Hugl.
Committed on 06/06/2024 at 14:54.
Pushed by zamundaaa into branch 'master'.

window: use the correct output when electric border quick tiling

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/0cd6f5cd06c00b9a4dff25af2d54b5aa3b98a4db
Comment 4 Zamundaaa 2024-06-06 17:12:00 UTC
Git commit 1d936cf69d83f2b0ee770376d86f508b16757382 by Xaver Hugl.
Committed on 06/06/2024 at 16:53.
Pushed by zamundaaa into branch 'Plasma/6.1'.

window: use the correct output when electric border quick tiling


(cherry picked from commit 0cd6f5cd06c00b9a4dff25af2d54b5aa3b98a4db)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/-/commit/1d936cf69d83f2b0ee770376d86f508b16757382