window: use the correct output when electric border quick tiling

BUG: 487844